test_suite/tests/ui/unknown-attribute/field.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
struct C {
    #[serde(abc = "xyz")]
    x: u32,
}

fn main() {}
